--- a/PlaystationDiscord/PlaystationDiscord.csproj
+++ b/PlaystationDiscord/PlaystationDiscord.csproj
@@ -45,6 +45,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
