--- a/PlaystationDiscord/packages.config
+++ b/PlaystationDiscord/packages.config
@@ -3,4 +3,5 @@
   <package id="Flurl" version="2.7.1" targetFramework="net47" />
   <package id="Flurl.Http" version="2.3.1" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
+  <package id="WPF_ToggleSwitch" version="1.3.0" targetFramework="net47" />
 </packages>
