--- a/PlaystationDiscord/PlaystationDiscord.csproj
+++ b/PlaystationDiscord/PlaystationDiscord.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{47B3EC15-65BB-4DB2-87C2-870E83543D1D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>PlaystationDiscord</RootNamespace>
-    <AssemblyName>PlaystationDiscord</AssemblyName>
+    <RootNamespace>PlayStationDiscord</RootNamespace>
+    <AssemblyName>PlayStationDiscord</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -83,8 +83,11 @@
     <Compile Include="DiscordRPC.cs" />
     <Compile Include="ExpiredAccessTokenException.cs" />
     <Compile Include="ExpiredRefreshTokenException.cs" />
+    <Compile Include="FlurlProxy.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GitHubRelease.cs" />
     <Compile Include="TokenHandler.cs" />
+    <Compile Include="UpdateChecker.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
