add missing files

--- a/PlayStationDiscord/PlayStationDiscord.csproj
+++ b/PlayStationDiscord/PlayStationDiscord.csproj
@@ -47,9 +47,8 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PlayStationSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\GitHub\PlayStationSharp\PlayStationSharp\bin\Release\PlayStationSharp.dll</HintPath>
+    <Reference Include="PlayStationSharp">
+      <HintPath>.\PlayStationSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
