--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord Rich Presence for PlayStation consoles.",
   "main": "./dist/app.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && sass ./assets/app.scss ./assets/app.css --style=compressed --no-source-map",
     "watch": "tsc -w",
     "start": "npm run build && electron ."
   },
@@ -36,9 +36,10 @@
     "query-string": "^6.2.0"
   },
   "devDependencies": {
-    "@types/electron-json-storage": "^4.0.0",
+    "@fortawesome/fontawesome-free": "^5.7.0",
     "@types/electron-store": "^1.3.0",
     "@types/query-string": "^6.2.0",
+    "dart-sass": "^1.16.1",
     "typescript": "^3.2.4"
   }
 }
