--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Discord Rich Presence for PlayStation consoles.",
   "main": "./dist/app.js",
   "scripts": {
+    "lint": "tslint --project .",
     "build": "tsc && sass ./assets/app.scss ./assets/app.css --style=compressed --no-source-map",
     "watch": "tsc -w",
-    "start": "npm run build && electron ."
+    "start": "npm run lint && npm run build && electron ."
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "@types/electron-store": "^1.3.0",
     "@types/query-string": "^6.2.0",
     "dart-sass": "^1.16.1",
+    "tslint": "^5.12.1",
     "typescript": "^3.2.4"
   }
 }
