--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@fortawesome/fontawesome-free": "^5.7.0",
     "@types/electron-store": "^1.3.0",
     "@types/query-string": "^6.2.0",
-    "dart-sass": "^1.16.1",
+    "sass": "^1.16.1",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4"
   }
