--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
   },
   "homepage": "https://tusticles.com/PlayStationDiscord/",
   "dependencies": {
-    "@polymer/paper-button": "^3.0.1",
     "discord-rich-presence": "0.0.8",
-    "electron": "^4.0.3",
+    "electron-log": "^3.0.1",
     "electron-store": "^2.0.0",
     "query-string": "^6.2.0"
   },
@@ -41,6 +40,7 @@
     "@fortawesome/fontawesome-free": "^5.7.0",
     "@types/electron-store": "^1.3.0",
     "@types/query-string": "^6.2.0",
+    "electron": "^4.0.4",
     "sass": "^1.16.1",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4"
