--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "discord-rich-presence": "0.0.8",
     "electron-log": "^3.0.1",
     "electron-store": "^2.0.0",
-    "query-string": "^6.2.0"
+    "query-string": "^6.2.0",
+    "register-scheme": "^0.0.2"
   },
   "devDependencies": {
     "@types/electron-store": "^1.3.0",
