--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Discord Rich Presence for PlayStation consoles.",
   "main": "./dist/app.js",
   "build": {
+    "asar": false,
     "appId": "com.playstationdiscord.app",
     "win": {
-      "target": "nsis-web",
+      "target": "nsis",
       "icon": "./build/icons/win/icon.ico",
       "publisherName": "Tustin"
     },
@@ -20,25 +21,25 @@
     "files": [
       "node_modules/**/*",
       "dist/**/*",
+      "assets/images/*",
       "package.json"
     ],
-    "nsisWeb": {
-      "differentialPackage": true,
+    "nsis": {
       "runAfterFinish": true,
-      "deleteAppDataOnUninstall": true,
       "createDesktopShortcut": true,
-      "allowElevation": true,
       "shortcutName": "PlayStationDiscord",
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
+      "oneClick": true,
       "installerIcon": "./build/icons/win/icon.ico",
       "uninstallerIcon": "./build/icons/win/icon.ico",
       "installerHeaderIcon": "./build/icons/win/icon.ico",
       "uninstallDisplayName": "PlayStationDiscord ${version}",
-      "artifactName": "PlayStationDiscord ${version} Setup.${ext}"
+      "artifactName": "PlayStationDiscord ${version} Setup.${ext}",
+      "perMachine": false
     },
     "publish": {
       "provider": "github",
+      "owner": "Tustin",
+      "repo": "PlayStationDiscord-Test",
       "useMultipleRangeRequest": false
     }
   },
@@ -49,11 +50,12 @@
     "start": "npm run lint && npm run compile && electron .",
     "build-icons": "electron-icon-maker -i ./assets/images/logo.png -o ./build/",
     "build-win": "npm run compile && npm run build-icons && electron-builder build --windows",
-    "build-mac": "npm run compile && npm run build-icons && electron-builder build --mac"
+    "build-mac": "npm run compile && npm run build-icons && electron-builder build --mac",
+    "release": "npm run compile && npm run build-icons && electron-builder build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tustin/PlayStationDiscord.git"
+    "url": "git+https://github.com/Tustin/PlayStationDiscord-Test.git"
   },
   "keywords": [
     "discord",
@@ -69,22 +71,29 @@
   "author": "Tustin",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/Tustin/PlayStationDiscord/issues"
+    "url": "https://github.com/Tustin/PlayStationDiscord-Test/issues"
   },
-  "homepage": "https://tusticles.com/PlayStationDiscord/",
+  "homepage": "https://tusticles.com/PlayStationDiscord-Test/",
   "dependencies": {
+    "asar": "^0.14.6",
+    "axios": "^0.18.0",
+    "blob": "^0.0.5",
     "discord-rich-presence": "0.0.8",
     "electron-log": "^3.0.1",
     "electron-store": "^2.0.0",
+    "electron-updater": "^4.0.6",
+    "progress-stream": "^2.0.0",
     "query-string": "^6.2.0",
-    "register-scheme": "^0.0.2"
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@types/electron-store": "^1.3.0",
     "@types/query-string": "^6.2.0",
+    "@types/semver": "^5.5.0",
     "electron": "^4.0.4",
     "electron-builder": "^20.38.5",
     "electron-icon-maker": "^0.0.4",
+    "electron-packager": "^13.0.1",
     "sass": "^1.16.1",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4"
