--- a/package.json
+++ b/package.json
@@ -78,13 +78,16 @@
     "asar": "^0.14.6",
     "axios": "^0.18.0",
     "blob": "^0.0.5",
+    "chromium-pickle-js": "^0.2.0",
+    "cuint": "^0.2.2",
     "discord-rich-presence": "0.0.8",
     "electron-log": "^3.0.1",
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
     "progress-stream": "^2.0.0",
     "query-string": "^6.2.0",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "tmp": "^0.0.33"
   },
   "devDependencies": {
     "@types/electron-store": "^1.3.0",
