--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es6",
     "noImplicitAny": true,
     "removeComments": true,
+    "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
