--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "PlayStationDiscord",
+  "name": "playstationdiscord",
   "version": "1.0.0",
   "description": "Discord Rich Presence for PlayStation consoles.",
   "main": "./dist/app.js",
   "build": {
-    "asar": false,
-    "appId": "com.playstationdiscord.app",
+    "appId": "com.tustin.playstationdiscord",
+    "productName": "PlayStationDiscord",
     "win": {
       "target": "nsis",
-      "icon": "./build/icons/win/icon.ico",
-      "publisherName": "Tustin"
+      "icon": "./build/icons/win/icon.ico"
     },
     "mac": {
       "target": "dmg",
@@ -27,20 +26,19 @@
     "nsis": {
       "runAfterFinish": true,
       "createDesktopShortcut": true,
-      "shortcutName": "PlayStationDiscord",
-      "oneClick": true,
+      "oneClick": false,
       "installerIcon": "./build/icons/win/icon.ico",
       "uninstallerIcon": "./build/icons/win/icon.ico",
       "installerHeaderIcon": "./build/icons/win/icon.ico",
       "uninstallDisplayName": "PlayStationDiscord ${version}",
-      "artifactName": "PlayStationDiscord ${version} Setup.${ext}",
-      "perMachine": false
+      "artifactName": "${productName}-${version}.${ext}",
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true
     },
     "publish": {
       "provider": "github",
-      "owner": "Tustin",
-      "repo": "PlayStationDiscord-Test",
-      "useMultipleRangeRequest": false
+      "releaseType": "draft",
+      "vPrefixedTagName": false
     }
   },
   "scripts": {
@@ -82,6 +80,7 @@
     "compare-versions": "^3.4.0",
     "cuint": "^0.2.2",
     "discord-rich-presence": "0.0.8",
+    "electron-is-dev": "^1.0.1",
     "electron-log": "^3.0.1",
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
@@ -91,6 +90,7 @@
     "tmp": "^0.0.33"
   },
   "devDependencies": {
+    "@types/electron-is-dev": "^0.3.0",
     "@types/electron-store": "^1.3.0",
     "@types/query-string": "^6.2.0",
     "@types/semver": "^5.5.0",
