--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "compile": "npm run lint && tsc && sass ./assets/app.scss ./dist/app.css --style=compressed --no-source-map",
     "watch": "tsc -w",
     "start": "npm run compile && electron .",
-    "build-icons": "electron-icon-maker -i ./assets/images/logo.png -o ./build/",
-    "build-win": "npm run compile && npm run build-icons && electron-builder build --windows",
-    "build-mac": "npm run compile && npm run build-icons && electron-builder build --mac",
-    "release": "npm run compile && npm run build-icons && electron-builder build"
+    "build:icons": "electron-icon-maker -i ./assets/images/logo.png -o ./build/",
+    "build:win": "npm run compile && npm run build:icons && electron-builder build --windows",
+    "build:mac": "npm run compile && npm run build:icons && electron-builder build --mac",
+    "release": "npm run compile && npm run build:icons && electron-builder build",
+    "test": "npm run compile && npm run build:icons && electron-packager . --asar --overwrite --out=test && ./test/playstationdiscord-win32-x64/playstationdiscord.exe"
   },
   "repository": {
     "type": "git",
