--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .vs
 PlayStationDiscord/
 packages/
+node_modules
+dist/*
+!dist/app.html
+build/*
+!build/installer.nsh
+test/*
+*.css
+*.log
+.vscode/
