--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "electron-log": "^3.0.1",
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
+    "normalize.css": "^8.0.1",
     "progress-stream": "^2.0.0",
     "query-string": "^6.2.0"
   },
