install packages first

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -7,4 +7,6 @@ jobs:
     name: Linter
     runs-on: ubuntu-latest
     steps:
-      - run: yarn lint
+      - run: |
+      yarn install
+      yarn lint
