Revert "install packages first"
This reverts commit 24d8dcc0117baa8411ea5f329ecbb33e2d91a307.

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -7,6 +7,4 @@ jobs:
     name: Linter
     runs-on: ubuntu-latest
     steps:
-      - run: |
-      yarn install
-      yarn lint
+      - run: yarn lint
