--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -7,6 +7,7 @@ jobs:
     name: Linter
     runs-on: ubuntu-latest
     steps:
+    - name: Install dependencies and lint
       run: |
         yarn install
         yarn lint
