--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,8 @@ jobs:
     name:  Github Create Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Filters for Master branch
-        uses: actions/bin/filter@master
-        with:
-          args: branch master
-      - name: 'Github Create Release'
-        uses: frankjuniorr/github-create-release-action@master
+      - uses: actions/checkout@v1
+      - uses: Tustin/github-create-release-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
