--- a/package.json
+++ b/package.json
@@ -89,9 +89,10 @@
   "devDependencies": {
     "@types/electron-is-dev": "^0.3.0",
     "@types/electron-store": "^1.3.0",
+    "@types/node": "^12.12.21",
     "@types/query-string": "^6.2.0",
     "@types/semver": "^5.5.0",
-    "electron": "^4.0.4",
+    "electron": "^7.1.9",
     "electron-builder": "^20.38.5",
     "electron-icon-maker": "^0.0.4",
     "electron-packager": "^13.0.1",
