--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "lint": "tslint --project .",
     "compile": "npm run lint && tsc && sass ./assets/app.scss ./dist/app.css --style=compressed --no-source-map",
     "watch": "tsc -w",
-    "start": "npm run compile && electron .",
+    "start": "npm run compile && cross-env NODE_ENV=prod electron .",
     "build:icons": "electron-icon-maker -i ./assets/images/logo.png -o ./build/",
     "build:win": "npm run compile && npm run build:icons && electron-builder build --windows",
     "build:mac": "npm run compile && npm run build:icons && electron-builder build --mac",
     "release": "npm run compile && npm run build:icons && electron-builder build",
-    "test": "npm run compile && npm run build:icons && electron-packager . --asar --overwrite --out=test && ./test/playstationdiscord-win32-x64/playstationdiscord.exe"
+    "test": "npm run compile && npm run build:icons && electron-packager . --asar --overwrite --out=test && cross-env NODE_ENV=dev ./test/playstationdiscord-win32-x64/playstationdiscord.exe"
   },
   "repository": {
     "type": "git",
@@ -64,6 +64,7 @@
     "rpc",
     "playstation",
     "psn",
+    "ps5",
     "ps4",
     "ps3",
     "vita"
@@ -78,7 +79,6 @@
     "axios": "^0.18.1",
     "compare-versions": "^3.4.0",
     "discord-rich-presence": "0.0.8",
-    "electron-is-dev": "^1.0.1",
     "electron-log": "^3.0.1",
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
@@ -87,7 +87,6 @@
     "query-string": "^6.2.0"
   },
   "devDependencies": {
-    "@types/electron-is-dev": "^0.3.0",
     "@types/electron-store": "^1.3.0",
     "@types/node": "^12.12.21",
     "@types/query-string": "^6.2.0",
