--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "publish": {
       "provider": "github",
       "releaseType": "draft",
-      "vPrefixedTagName": false
+      "vPrefixedTagName": true
     }
   },
   "scripts": {
@@ -92,6 +92,7 @@
     "@types/node": "^12.12.21",
     "@types/query-string": "^6.2.0",
     "@types/semver": "^5.5.0",
+    "cross-env": "^6.0.3",
     "electron": "^7.1.9",
     "electron-builder": "^22.2.0",
     "electron-icon-maker": "^0.0.4",
