--- a/package.json
+++ b/package.json
@@ -1,8 +1,25 @@
 {
   "name": "playstationdiscord",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "Discord Rich Presence for PlayStation consoles.",
-  "main": "./dist/app.js",
+  "main": "dist/app/main.js",
+  "scripts": {
+    "dev": "npx cross-env NODE_ENV=development npm run watch:renderer",
+    "start": "npx cross-env NODE_ENV=development npm run build:app && npm run start:app",
+    "start:app": "npx electron ./ --disable-gpu",
+    "build": "npx cross-env NODE_ENV=production npm run build:app && npx cross-env NODE_ENV=production npm run build:renderer",
+    "build:app": "npx webpack --config webpack-app.config.js --hide-modules --progress && npx ncp ./src/app/assets ./dist/app/assets",
+    "build:renderer": "npx webpack --config webpack-renderer.config.js --hide-modules --progress",
+    "watch:renderer": "npx webpack-dev-server --config webpack-renderer.config.js",
+    "pack": "npm run build && npx electron-builder --dir",
+    "dist": "npm run build && npx electron-builder",
+    "dist:all": "npm run build && npx electron-builder -wml --x64",
+    "dist:w": "npm run build && npx electron-builder -w --x64",
+    "dist:m": "npm run build && npx electron-builder -m --x64",
+    "dist:l": "npm run build && npx electron-builder -l --x64",
+    "postinstall": "npx electron-builder install-app-deps",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "build": {
     "appId": "com.tustin.playstationdiscord",
     "productName": "PlayStationDiscord",
@@ -42,18 +59,6 @@
       "vPrefixedTagName": true
     }
   },
-  "scripts": {
-    "lint": "tslint --project .",
-    "compile": "npm run lint && tsc && sass ./assets/app.scss ./dist/app.css --style=compressed --no-source-map",
-    "watch": "tsc -w",
-    "start": "npm run compile && cross-env NODE_ENV=dev electron .",
-    "build:icons": "electron-icon-maker -i ./assets/images/logo.png -o ./build/",
-    "build:win": "npm run compile && npm run build:icons && electron-builder build --ia32 --x64",
-    "build:mac": "npm run compile && npm run build:icons && electron-builder build --mac",
-    "build": "npm run compile && npm run build:icons",
-    "release": "npm run compile && npm run build:icons && electron-builder build",
-    "test": "npm run compile && npm run build:icons && electron-packager . --asar --overwrite --out=test && cross-env NODE_ENV=dev ./test/playstationdiscord-win32-x64/playstationdiscord.exe"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Tustin/PlayStationDiscord.git"
@@ -72,11 +77,9 @@
   ],
   "author": "Tustin",
   "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/Tustin/PlayStationDiscord/issues"
-  },
-  "homepage": "https://tusticles.com/PlayStationDiscord/",
   "dependencies": {
+    "normalize.css": "^8.0.1",
+    "vue": "^3.0.2",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "compare-versions": "^3.4.0",
@@ -85,25 +88,44 @@
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
     "lodash": "^4.17.21",
-    "normalize.css": "^8.0.1",
     "progress-stream": "^2.0.0",
     "query-string": "^6.14.0",
     "unorm": "^1.6.0"
   },
   "devDependencies": {
-    "@types/discord-rpc": "^3.0.4",
-    "@types/electron-store": "^1.3.0",
-    "@types/node": "^12.20.4",
-    "@types/query-string": "^6.2.0",
-    "@types/semver": "^5.5.0",
-    "cross-env": "^6.0.3",
-    "electron": "^10.4.0",
+    "@babel/core": "^7.12.3",
+    "@babel/eslint-parser": "^7.12.1",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@vue/compiler-sfc": "^3.0.2",
+    "babel-loader": "^8.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
+    "devtron": "^1.4.0",
+    "electron": "^10.1.5",
     "electron-builder": "^22.9.1",
-    "electron-icon-maker": "^0.0.4",
-    "electron-packager": "^13.0.1",
-    "register-scheme": "^0.0.2",
-    "sass": "^1.32.8",
-    "tslint": "^5.12.1",
-    "typescript": "^3.9.9"
+    "eslint": "^7.13.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-vue": "^7.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^0.12.0",
+    "ncp": "^2.0.0",
+    "node-sass": "^5.0.0",
+    "postcss": "^8.1.7",
+    "postcss-loader": "^4.0.4",
+    "postcss-scss": "^3.0.4",
+    "sass-loader": "^10.1.0",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.2.2",
+    "vue-devtools": "^5.1.4",
+    "vue-eslint-parser": "^7.1.1",
+    "vue-loader": "^16.0.0-rc.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
