--- a/package.json
+++ b/package.json
@@ -78,8 +78,6 @@
   "author": "Tustin",
   "license": "GPL-3.0",
   "dependencies": {
-    "normalize.css": "^8.0.1",
-    "vue": "^3.0.2",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "compare-versions": "^3.4.0",
@@ -88,21 +86,31 @@
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
     "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "progress-stream": "^2.0.0",
     "query-string": "^6.14.0",
-    "unorm": "^1.6.0"
+    "resolve-url-loader": "^3.1.2",
+    "unorm": "^1.6.0",
+    "url-loader": "^4.1.1",
+    "vue": "^3.0.2",
+    "vue-router": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/eslint-parser": "^7.12.1",
+    "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.8",
     "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@types/discord-rpc": "^3.0.4",
+    "@types/electron-store": "^1.3.0",
+    "@types/node": "^12.20.4",
+    "@types/query-string": "^6.2.0",
+    "@types/semver": "^5.5.0",
     "@vue/compiler-sfc": "^3.0.2",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "devtron": "^1.4.0",
-    "electron": "^10.1.5",
+    "electron": "^10.4.0",
     "electron-builder": "^22.9.1",
     "eslint": "^7.13.0",
     "eslint-loader": "^4.0.2",
