--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@types/lodash": "^4.14.168",
+    "@wuild/vue-titlebar": "^1.0.1",
     "axios": "^0.21.1",
     "compare-versions": "^3.4.0",
     "discord-rpc": "^3.2.0",
