--- a/package.json
+++ b/package.json
@@ -78,14 +78,17 @@
   "author": "Tustin",
   "license": "GPL-3.0",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "@types/lodash": "^4.14.168",
-    "@wuild/vue-titlebar": "^1.0.1",
     "axios": "^0.21.1",
     "compare-versions": "^3.4.0",
     "discord-rpc": "^3.2.0",
     "electron-log": "^4.3.2",
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
+    "hamburgers": "^1.1.3",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "progress-stream": "^2.0.0",
