--- a/package.json
+++ b/package.json
@@ -80,8 +80,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "@types/lodash": "^4.14.168",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "compare-versions": "^3.4.0",
     "discord-rpc": "^3.2.0",
