--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "unorm": "^1.6.0",
     "url-loader": "^4.1.1",
     "vue": "^3.0.2",
-    "vue-router": "^4.0.4"
+    "vue-router": "^4.0.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
