--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "homepage": "https://tusticles.com/PlayStationDiscord/",
   "dependencies": {
     "@types/lodash": "^4.14.168",
+    "auto-launch": "^5.0.5",
     "axios": "^0.24.0",
     "compare-versions": "^4.1.2",
     "discord-rpc": "^4.0.1",
