--- a/package.json
+++ b/package.json
@@ -92,11 +92,11 @@
   },
   "devDependencies": {
     "@types/discord-rpc": "^4.0.0",
-    "@types/node": "^17.0.4",
+    "@types/node": "^17.0.5",
     "@types/semver": "^7.3.9",
     "cross-env": "^7.0.3",
     "electron": "^16.0.5",
-    "electron-builder": "^22.9.1",
+    "electron-builder": "~22.13.1",
     "electron-icon-maker": "^0.0.5",
     "electron-packager": "^15.4.0",
     "register-scheme": "^0.0.2",
